--- a/style.css
+++ b/style.css
@@ -67,7 +67,10 @@ a {
     margin-right: auto }
 
 
+.img-sort{
 
+    float:;
+}
 /***********************************************************************
  *  Cover
  **********************************************************************/
@@ -78,14 +81,81 @@ a {
     align-items: center;
     justify-content: center;
 }
+.about-us{
+    height: auto; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #303b59;
+    text-align: center;
+    display:block;
+    padding: 20px;
+    text-align: justify;
+    margin: 20px;
 
+
+}
 .contact-container {
     /*show heigh: auto*/
     height: 50vh; 
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    width: auto;
+    margin:20px;
+    
 }
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+
+  input[type=tel], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+
+  input[type=email], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+
+
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+input[type=submit]:hover {
+    background-color: #45a049;
+  }
 
 /***********************************************************************
  *  Grid Panel
