--- a/style.css
+++ b/style.css
@@ -164,6 +164,18 @@ input[type=submit]:hover {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 20px;
+
+    /*show heigh: auto*/
+    
+
+    
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    width: auto;
+    margin:20px;
+    
+
 }
 
 .responsive-img{
@@ -194,6 +206,7 @@ footer {
  **********************************************************************/
 .green {
     background: #303b59; /* Old browsers */
+   
     
 }
 
@@ -207,6 +220,7 @@ footer {
   text-align: center;
   margin: 20px;
   height:auto;
+  opacity: 0.9;
   
   
 }
@@ -214,24 +228,13 @@ footer {
  *  Yellow Background
  **********************************************************************/
 .yellow {
-    background: #F3AAAA; /* Old browsers */
-    background: -moz-linear-gradient(top, #F3AAAA 0%, #febf04 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#F3AAAA), color-stop(100%,#febf04)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #F3AAAA 0%,#febf04 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #F3AAAA 0%,#febf04 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #F3AAAA 0%,#febf04 100%); /* IE10+ */
-    background: linear-gradient(top, #F3AAAA 0%,#febf04 100%); /* W3C */
+    background: #303b59; /* Old browsers */
 }
 
 /***********************************************************************
  *  Blue Background
  **********************************************************************/
 .blue {
-    background: #7abcff; /* Old browsers */
-    background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* IE10+ */
-    background: linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
+    background-color: #f2f2f2;
+    
 }
