--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ footer {
  *  Green Background
  **********************************************************************/
 .green {
-    background: #303b59; /* Old browsers *
+    background: #303b59; /* Old browsers */
    
     
 }
