--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
 html{
 
-    background-image: url("img/big-concrete.jpg");
+
+  font-family: 'Chivo', sans-serif;
+    
 }
 body {
     margin: 0 auto;
-    background-image: url("img/big-concrete.jpg");
+    background-color: #f1eee9;
+   
 }
 
 .zone {
     /*padding:30px 50px;*/
     /*cursor:pointer;*/
     color:#FFF;
-    font-size:2em;
+    /*font-size:2em;*/
     border-radius:4px;
     border:1px solid #bbb;
+  
     transition: all 0.3s linear;
 }
 
@@ -31,9 +35,14 @@ body {
     display: flex;
     list-style: none;
     margin: 0;
-    font-size: 0.7em;
+    font-size: 2em;
+    padding: 15px 0;
 }
 
+.main-nav:hover{
+  color:#b73b6e;
+
+}
 @media only screen and (max-width: 600px) {
     .main-nav {
         font-size: 0.5em;
@@ -80,33 +89,59 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    
+    margin: 0 auto;
+    max-width: 1450px;
 }
+#what-we-do-title{
+  grid-column: 1 / 4;
+  grid-row: 1;
+  text-align: center;
+  color: black;
+  
+
+
+}
+/*About Us*/
 .about-us{
     height: auto; 
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #303b59;
+    background: rgb(48,59,89,0.9);
     text-align: center;
     display:block;
     padding: 20px;
     text-align: justify;
     margin: 20px;
-
+    max-width: 1450px;
+    margin:0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;;
+    color: black;
+    text-align: center ;
+    
 
 }
-.contact-container {
-    /*show heigh: auto*/
-    height: 50vh; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-    width: auto;
-    margin:20px;
-    
+
+.container1 {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  margin:20px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  max-width: 1450px;
+  margin:0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;;
+  opacity: 0.9;
+  color: black;
+  
+}
+
+#contact-title{
+  text-align: center;
 }
 
 input[type=text], select, textarea {
@@ -164,6 +199,8 @@ input[type=submit]:hover {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 20px;
+   
+    margin: auto 0;
 
     /*show heigh: auto*/
     
@@ -174,19 +211,21 @@ input[type=submit]:hover {
     padding: 20px;
     width: auto;
     margin:20px;
-    
-
-}
-
-.responsive-img{
-
+    max-width: 1450px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    opacity: 0.9;
 
 
 }
+
+
 .box {
-    background-color: #444;
+    background-color:#72716f;
     padding: 130px;
     margin: 20px;
+    padding: 20px;
+
 }
 
 .box > img {
@@ -207,12 +246,13 @@ footer {
  **********************************************************************/
 .green {
     background: #303b59; /* Old browsers */
+    
    
     
 }
 
 /***********************************************************************
- *  Red Background
+ *  MAIN LOGO
  **********************************************************************/
 .red {
   background: rgb(48,59,89,0.9);
@@ -221,7 +261,10 @@ footer {
   text-align: center;
   margin: 20px;
   height:auto;
-  ;
+  max-width: 1450px;
+  margin:0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
   
   
 }
@@ -234,7 +277,7 @@ footer {
 }
 
 /***********************************************************************
- *  Blue Background
+ *  WHAT WE DO 
  **********************************************************************/
 .blue {
     background-color: #f2f2f2;
@@ -288,15 +331,7 @@ footer {
     background-color: #45a049;
   }
   
-  .container1 {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-    margin:20px;
-    border-radius: 5px;
-    background-color: #f2f2f2;
-  }
-  
+ 
   .col-25 {
     float: left;
     width: 25%;
@@ -323,3 +358,139 @@ footer {
       margin-top: 0;
     }
   }
+
+  .bt {
+    border-top-style: solid;
+    border-top-width: 1px;
+}
+
+.b--black-10 {
+    border-color: rgba(0, 0, 0, .1);
+}
+
+.db {
+    display: block;
+}
+
+.dib {
+    display: inline-block;
+}
+
+.b {
+    font-weight: bold;
+}
+
+.lh-solid {
+    line-height: 1;
+}
+
+.link {
+    text-decoration: none;
+    transition: color .15s ease-in;
+}
+
+.link:link, .link:visited {
+    transition: color .15s ease-in;
+}
+
+.link:hover {
+    transition: color .15s ease-in;
+}
+
+.link:active {
+    transition: color .15s ease-in;
+}
+
+.link:focus {
+    transition: color .15s ease-in;
+    outline: 1px dotted currentColor;
+}
+
+.black-70 {
+    color: rgba(0, 0, 0, .7);
+}
+
+.mid-gray {
+    color: #555;
+}
+
+.pl2 {
+    padding-left: .5rem;
+}
+
+.pr2 {
+    padding-right: .5rem;
+}
+
+.pv6 {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+}
+
+.ph2 {
+    padding-left: .5rem;
+    padding-right: .5rem;
+}
+
+.ph3 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.mt5 {
+    margin-top: 4rem;
+}
+
+.ttu {
+    text-transform: uppercase;
+}
+
+.f3 {
+    font-size: 1.5rem;
+}
+
+.f6 {
+    font-size: .875rem;
+}
+
+.dim {
+    opacity: 1;
+    transition: opacity .15s ease-in;
+}
+
+.dim:hover, .dim:focus {
+    opacity: .5;
+    transition: opacity .15s ease-in;
+}
+
+.dim:active {
+    opacity: .8;
+    transition: opacity .15s ease-out;
+}
+
+@media screen and (min-width: 30em) {
+    .ph4-ns {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+
+    .f2-ns {
+        font-size: 2.25rem;
+    }
+}
+.footer-lol{
+
+  background-color:#b49c78;
+}
+
+
+.cool-icon{
+  list-style-image: url(img/bullet.png);
+  
+}
+
+.no-icon{
+
+
+  list-style-type:none;
+}
